--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
+    "react-router-hash-link": "^2.4.3",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
